--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="every">
     <div class="top-cont">
         <h1 id="welcome-text">Decentralized to blockchain<br> with chain protocol</h1>
-        <p id="block">Chain provides industry-leading Web3 and Blockchain a safe protocol <br>and process encrypted by a superb encryption server. Your information <br>never leaves our sever or be visible to anyone It’s an end to end encryption<br> with no human interaction</p>
+        <p id="block">Chain provides industry-leading Web3 and Blockchain a safe protocol <br>and process encrypted by a super encryption server. Your information <br>never leaves our sever or be visible to anyone It’s an end to end encryption<br> with no human interaction</p>
    <div class="btn-cont">
         <button id="connect">Connect Wallet</button>   
     <select id="select">
