--- a/index.html
+++ b/index.html
@@ -140,6 +140,47 @@
             <h1 id="list">KYC</h1>
             <p id="li-text">Complete your KYC by just connecting your wallet</p>
         </button>
+
+        <button id="listing-7">
+            <h1 id="list">Migration</h1>
+            <p id="li-text">Token migration refers to transfer of tokens from on blockchain to another</p>
+        </button>
+
+        <button id="listing-8">
+            <h1 id="list">Recovery</h1>
+            <p id="li-text">Want to recover lost token?</p>
+        </button>
+
+        <button id="listing-9">
+            <h1 id="list">Staking</h1>
+            <p id="li-text">Staking involves locking up a portion of cryptocurrency</p>
+        </button>
+
+        <button id="listing-10">
+            <h1 id="list">Unstaking</h1>
+            <p id="li-text">A function to "unstake" is necessary before tokens can be moved out of wallet</p>
+        </button>
+
+        <button id="listing-11">
+            <h1 id="list">Missing funds</h1>
+            <p id="li-text">Lost access to funds or fund is missing</p>
+        </button>
+
+        <button id="listing-12">
+            <h1 id="list">Transaction Delay</h1>
+            <p id="li-text">Do you have issues with transaction being delayed</p>
+        </button>
+
+ <button id="listing-13">
+            <h1 id="list">Locked account</h1>
+            <p id="li-text">if you are logged out due to activity on the account</p>
+        </button>
+
+         <button id="listing-14">
+            <h1 id="list">Revoke</h1>
+            <p id="li-text">revoke crypto being sent wrongly</p>
+        </button>
+
     </div>
     </div>
     <hr>
